--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,19 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
-    scriptType: 'bash'
-    scriptLocation: 'scriptPath'
-    scriptPath: 'kube.sh'
-    addSpnToEnvironment: true
-    useGlobalConfig: true
+stages:
+- stage:
+  jobs:
+   - job:
+     steps:
+     - task: AzureCLI@2
+       inputs:
+        azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
+        scriptType: 'bash'
+        scriptLocation: 'scriptPath'
+        scriptPath: 'docker.sh'
+        addSpnToEnvironment: true
+        useGlobalConfig: true
