Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,9 @@ stages:
   jobs:
    - job:
      steps:
-     - task: Bash@3
+     - task: AzureCLI@2
        inputs:
-         targetType: 'inline'
-         script: 'sh docker.sh'
+         azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
+         scriptType: 'bash'
+         scriptLocation: 'inlineScript'
+         inlineScript: 'kube.sh'
