Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,4 @@ stages:
          scriptType: 'bash'
          scriptLocation: 'inlineScript'
          inlineScript: 'kube.sh'
+         useGlobalConfig: true
