Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,4 @@ stages:
          scriptLocation: 'inlineScript'
          inlineScript: 'kube.sh'
          useGlobalConfig: true
+         workingDirectory: $(System.DefaultWorkingDirectory)
