Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ stages:
          azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
          scriptType: 'bash'
          scriptLocation: 'inlineScript'
-         inlineScript: 'kube.sh'
+         inlineScript: './kube.sh'
          useGlobalConfig: true
          workingDirectory: $(System.DefaultWorkingDirectory)
