Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ stages:
        inputs:
          azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
          scriptType: 'bash'
-         scriptLocation: 'inlineScript'
+         scriptLocation: 'ScriptPath'
          scriptPath: 'az-vm.sh'
          useGlobalConfig: true
          workingDirectory: $(System.DefaultWorkingDirectory)
