--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,8 @@ stages:
   jobs:
    - job:
      steps:
-     - task: AzureCLI@2
+     - task: AWSCLI@1
        inputs:
-         azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
-         scriptType: 'bash'
-         scriptLocation: 'ScriptPath'
-         scriptPath: 'kube.sh'
-         useGlobalConfig: true
-         workingDirectory: $(System.DefaultWorkingDirectory)
+         awsCredentials: 'AWS'
+         regionName: 'ap-south-1'
+         awsCommand: 'aws --version'
