--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,4 @@ stages:
          awsCredentials: 'AWS'
          regionName: 'ap-south-1'
          awsCommand: 'aws --version'
+         awsSubCommand: 'aws --version'
