--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,4 @@ stages:
      - task: Bash@3
        inputs:
          targetType: 'inline'
-         script: 'aws --version'
+         script: 'aws ec2 describe-instances'
