--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,6 @@ stages:
      - task: Bash@3
        inputs:
          targetType: 'inline'
-         script: 'printenv'
+         script: |
+           'printenv'
+           'pwd'
