--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,4 @@ stages:
      steps:
      - task: Bash@3
        inputs:
-         targetType: 'inline'
-         script: |
-           'sudo wget https://github.com/aquasecurity/trivy/releases/download/v0.48.0/trivy_0.48.0_Linux-64bit.deb'
-           'sudo dpkg -i trivy_0.48.0_Linux-64bit.deb'
+         filePath: 'trivy.sh'
