Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,9 @@ stages:
      - task: Bash@3
        inputs:
          filePath: 'trivy.sh'
+     - task: Bash@3
+       inputs:
+         targetType: 'inline'
+         script: |
+           docker pull caesar269/nginx:green
+           trivy image caesar269/nginx:green
