Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,4 +13,4 @@ stages:
        inputs:
         version: 'latest'
         loginDockerConfig: true
-        image: 'nginx'
+        image: 'caesar269/nginx:true'
