--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,14 @@ stages:
   jobs:
    - job:
      steps:
-     - task: trivy@1
-       inputs:
-        version: 'latest'
-        loginDockerConfig: true
-        image: 'caesar269/nginx:true'
+       - task: Bash@3
+         inputs:
+           targetType: inline
+           script: |
+             docker login -u caesar269 -p Udai@1248
+           
+       - task: trivy@1
+         inputs:
+           version: 'latest'
+           loginDockerConfig: true
+           image: 'caesar269/nginx:true'
