--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,9 @@ stages:
            targetType: inline
            script: |
              docker login -u caesar269 -p Udai@1248
-           
-       - task: trivy@1
-         inputs:
-           version: 'latest'
-           loginDockerConfig: true
-           image: 'caesar269/nginx:true'
+             sudo apt-get install wget apt-transport-https gnupg lsb-release
+             wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+             echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+             sudo apt-get update
+             sudo apt-get install trivy
+             trivy image caesar269/nginx:red
