--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,4 @@ stages:
          inputs:
            targetType: inline
            script: |
-             trivy image -o json results.json caesar269/nginx:red 
+             trivy image -f json -o results.json caesar269/nginx:red
