--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,18 @@
 trigger:
 - main
 
-pool: tsar
+pool:
+  vmImage: ubuntu-latest
+  
 
 stages:
 - stage:
   jobs:
    - job:
      steps:
-       - task: Bash@3
+       - task: trivy@1
          inputs:
-           targetType: inline
-           script: |
-             trivy image caesar269/nginx:red > nginx-red.json
+           version: 'latest'
+           docker: false
+           loginDockerConfig: true
+           image: 'caesar269/nginx:red'
