--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,13 @@ pool:
 
 stages:
 - stage:
-  jobs:
-   - job:
-     steps:
-       - task: trivy@1
-         inputs:
-           version: 'latest'
-           docker: false
-           loginDockerConfig: true
-           image: 'caesar269/nginx:red'
+  jobs::
+    - job:
+      steps:
+        - task: trivy@1
+          inputs:
+            path: .
+            
+        - task: trivy@1
+          inputs:
+          image: ubuntu
