--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ stages:
               inputs:
                 path: .
             
-            - task: trivy@1
+            - task: Bash@3
               inputs:
-                image: ubuntu
+                script: |
+                  trivy image nginx
