--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,6 @@ stages:
             
             - task: Bash@3
               inputs:
+                targetType: inline
                 script: |
-                  trivy image nginx
+                  'trivy image nginx'
