--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,4 @@ stages:
             - task: Bash@3
               inputs:
                 targetType: inline
-                script: |
-                  'trivy image nginx'
+                script: trivy image nginx
