--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,10 @@ stages:
     jobs:
       - job:
         steps:
-            - task: trivy@1
+            - task: Bash@3
               inputs:
-                path: .
+                targetType: filePath
+                filePath: ./trivy.sh
             
             - task: Bash@3
               inputs:
